--- a/DoM/index.html
+++ b/DoM/index.html
@@ -9,7 +9,7 @@
         <header>
            <h2 id="jh">This is heading</h2>
         </header>
-        <main>
+        <main id="main">
             <ul id="jh">
                 <li>1hfj</li>
                 <li>2fgfg</li>
@@ -17,8 +17,16 @@
                 <li>4fg </li>
                 <li>5fgfg</li>
             </ul>
+            <section>
+                <ul id="places">
+                    <li>shalbon</li>
+                    <li>balbon</li>
+                    <li>katabon</li>
+                    <li>dalbon</li>
+                </ul>
+            </section>
         </main>
-        <script>
+        <script src="append.js">
            const element=document.querySelector('#jh li');
            const li=document.createElement('li');
            li.innerText="baby";
